# pop4sim

./: .gitignore  README.md  docker-compose.yml  env-dev.yml  pyproject.toml  requirements.txt
docker/pkg/: Dockerfile
docker/pkg-dev/: Dockerfile
notebooks/: Example AgeSex.ipynb  Example All.ipynb  Example Sex.ipynb  Example.ipynb  Output India.ipynb  Test.ipynb
src/: setup.py
src/pkg/: __init__.py
src/pop4sim/: __init__.py  demography.py  fetcher.py  fn.py  utils.py
src/pop4sim/model/: __init__.py  age.py  age_sex.py  dy.py  overall.py  sex.py
tests/: test_basic.py
